# rtal-superlooper

./: CMakeLists.txt  README.md  TESTING_CHECKLIST.md  optimization_log  update_git.sh
packaging/: superlooper.desktop
scripts/: package-appimage.sh
src/: AudioEngine.cpp  AudioEngine.h  LoopManager.cpp  LoopManager.h  Lv2Host.cpp  Lv2Host.h  MainWindow.cpp  MainWindow.h  MidiInput.cpp  MidiInput.h  OptimizationLog.cpp  OptimizationLog.h  PedalBar.cpp  PedalBar.h  PianoWidget.cpp  PianoWidget.h  RootTimingWorker.cpp  RootTimingWorker.h  RubberBandWorker.cpp  RubberBandWorker.h  Sample.h  SampleLoader.cpp  SampleLoader.h  SamplePoolWidget.cpp  SamplePoolWidget.h  main.cpp
tests/: test_loop_manager.cpp
